# ImageCapture

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  cvCamp.cpp  index.html  myImageCapture
